# HLSpy

./: .gitignore  CMakeLists.txt  README.md  hackdl.cpp  main.cpp
__res__/artwork/: logo.ai  logo_blur.ai  logo_blur_bg.ai
examples/counter/: dff.v  hierarchy.json  hierarchy.txt
helpers/: basic.cpp  basic.h  flags.h  gui.cpp  gui.h  hierarchy.cpp  hierarchy.h
verilog/: Parser.cpp  Parser.h  blocks.cpp  blocks.h  design.cpp  design.h
verilog/__bak__/: Parser.cpp  Parser.h
